Refactor for package conflicts, remove username, and adding redis
