# services/users-server/manage.py
@@ -31,20 +31,20 @@ from flask.cli import FlaskGroup
 from prettytable import PrettyTable
 import coverage
 
-from api import create_app, get_flask_mongo
-from api.models import User
+from users_api import create_app, get_flask_mongo
+from users_api.models.models import User
 
 COV = coverage.coverage(
     branch=True,
     include=[
-        'api/models.py',
-        'api/users.py',
-        'api/auth.py',
-        'api/auth_decorators.py',
-        'api/mongodb.py',
+        'users_api/models.py',
+        'users_api/users.py',
+        'users_api/auth.py',
+        'users_api/auth_decorators.py',
+        'users_api/mongodb.py',
     ],
     omit=[
-        'api/__init__.py'
+        'users_api/__init__.py'
         'config.py',
         'tests/*',
         'simulation/*',
@@ -97,12 +97,11 @@ def seed_user_db():
         with open(path) as f:
             data = json.load(f)
 
-    tbl = PrettyTable(['No.', 'Username', 'Email', 'Name'])
+    tbl = PrettyTable(['No.', 'Email', 'Name'])
     print('Seeding users to <{}> database:'.format(db.name))
     for i, u in enumerate(data):
         new_user = User(
             email=u['email'],
-            username=u['username'],
             first_name=u['first_name'],
             last_name=u['last_name']
         )
@@ -110,11 +109,12 @@ def seed_user_db():
         new_user.save()
         tbl.add_row(
             (
-                str(i + 1), u['username'], u['email'],
+                str(i + 1),
+                u['email'],
                 '{} {}'.format(u['first_name'], u['last_name'])
             )
         )
-    tbl.align['Username'] = 'l'
+    tbl.align['Name'] = 'l'
     tbl.align['Email'] = 'l'
     print(tbl)
 
